--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "moment": "~2.10.6",
     "animate.css": "~3.4.0",
     "angular": "~1.4.2",
-    "bootstrap-table": "~1.9.0"
+    "bootstrap-table": "~1.9.0",
+    "angular-slick": "~0.2.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.2"
