--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "animate.css": "~3.4.0",
     "angular": "~1.4.2",
     "bootstrap-table": "~1.9.0",
-    "angular-slick": "~0.2.1"
+    "angular-slick": "~0.2.1",
+    "angular-chart.js": "~0.8.5"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.2"
