--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
     "bootstrap-table": "~1.9.0",
     "angular-slick": "~0.2.1",
     "angular-chart.js": "~0.8.5",
-    "underscore": "~1.8.3"
+    "underscore": "~1.8.3",
+    "components-font-awesome": "~4.4.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.2"
